[gd_scene load_steps=12 format=2]

[ext_resource path="res://Levels/Game/BG.gd" type="Script" id=1]
[ext_resource path="res://Assets/bg.png" type="Texture" id=2]
[ext_resource path="res://Entities/Lawyer/Lawyer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Props/Lane/Lane.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Game/Game.gd" type="Script" id=5]
[ext_resource path="res://Assets/font/OpenSans-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/sprites.png" type="Texture" id=7]
[ext_resource path="res://Assets/Music/chee-zee_convert.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0.00392157, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 131, 130 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 521.057, 358 )
scale = Vector2( 3.76186, 3.6881 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 615, 460 )
current = true
zoom = Vector2( 1.2, 1.2 )

[node name="Lawyer0" parent="." groups=[
"screen",
] instance=ExtResource( 3 )]
position = Vector2( 150, 200 )

[node name="Lane0" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 250 )
difficulty = 3

[node name="Lawyer1" parent="." groups=[
"screen",
] instance=ExtResource( 3 )]
position = Vector2( 150, 420 )
id = 1

[node name="Lane1" parent="." instance=ExtResource( 4 )]
modulate = Color( 0.713726, 0.756863, 0.211765, 1 )
position = Vector2( 0, 500 )
difficulty = 3

[node name="Lawyer2" parent="." groups=[
"screen",
] instance=ExtResource( 3 )]
position = Vector2( 150, 700 )
id = 2

[node name="Lane2" parent="." instance=ExtResource( 4 )]
modulate = Color( 0.207843, 0.831373, 0.541176, 1 )
position = Vector2( 0, 750 )
difficulty = 3

[node name="Label" type="Label" parent="." groups=[
"screen",
]]
margin_left = 1048.0
margin_top = 101.0
margin_right = 1229.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 1.736

[node name="God" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 615, 460 )
scale = Vector2( 2.48978, 2.25104 )
frames = SubResource( 3 )

[node name="Final" type="Label" parent="God"]
margin_left = -217.0
margin_top = 65.0
margin_right = 219.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="God"]
margin_left = -54.3027
margin_top = 126.556
margin_right = 56.6973
margin_bottom = 152.556
text = "BACK TO MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
autoplay = true
[connection signal="collided" from="Lawyer0" to="Lane0" method="_on_Lawyer_collided"]
[connection signal="dead" from="Lawyer0" to="." method="_on_Lawyer_dead"]
[connection signal="killed" from="Lane0" to="Lawyer0" method="_on_Lane_killed"]
[connection signal="collided" from="Lawyer1" to="Lane1" method="_on_Lawyer_collided"]
[connection signal="dead" from="Lawyer1" to="." method="_on_Lawyer_dead"]
[connection signal="killed" from="Lane1" to="Lawyer1" method="_on_Lane_killed"]
[connection signal="collided" from="Lawyer2" to="Lane2" method="_on_Lawyer_collided"]
[connection signal="dead" from="Lawyer2" to="." method="_on_Lawyer_dead"]
[connection signal="killed" from="Lane2" to="Lawyer2" method="_on_Lane_killed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="God/Button" to="." method="_on_Button_pressed"]
